force-app/main/default/objects/Deal_Desk_Assignees__c/Deal_Desk_Assignees__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom Object</description>
    <label>Deal Desk Assignees</label>
    <nameField>
        <label>Deal Desk Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Desk Assignees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>