force-app/main/default/objects/Deal_Desk_Assignees__c/fields/Deal_Desk_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Team__c</fullName>
    <label>Deal Desk Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Structuring</fullName>
            </value>
            <value>
                <fullName>Deal Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>