force-app/main/default/objects/Deal_Desk_Assignees__c/fields/ETM_Area__c.field-meta.xml
<CustomField>
    <fullName>ETM_Area__c</fullName>
    <label>ETM (Area)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>