force-app/main/default/objects/Deal_Desk_Assignees__c/fields/ETM_Region__c.field-meta.xml
<CustomField>
    <fullName>ETM_Region__c</fullName>
    <label>ETM (Region)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>