force-app/main/default/objects/Deal_Desk_Assignees__c/fields/ETM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>ETM_Theatre__c</fullName>
    <label>ETM (Theatre)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>