force-app/main/default/objects/Deal_Desk_Assignees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Desk_Team__c</columns>
    <columns>ETM_Region__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignees</label>
</ListView>